<resources>
    <string name="app_name">PicEdit</string>
    <string name="red_button">RED</string>
    <string name="blue_button">BLUE</string>
    <string name="green_button">GREEN</string>
    <string name="reset_button">CLEAR</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="size_text">SIZE = </string>
    <string name="white_button">WHITE</string>
    <string name="circle_button">CIRCLE</string>
    <string name="rectangle_button">RECT</string>
    <string name="line_button">LINE</string>
</resources>
